<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TeConvido</string>
    
    <string name="register_title">Registrar</string>
    <string name="recover_pass_title">Recuperar contraseña</string>
    <string name="menu_title">Menu principal</string>
    <string name="alert_title">Alertas</string>
    <string name="message_title">Mensajes</string>
    <string name="search_travel_title">Buscar Viaje</string>
    <string name="publish_travel_title">Publicar Viaje</string>
    <string name="profile_title">Perfil</string>
    <string name="my_travels_title">Mis Viajes</string>
    <string name="next_travel_title">Viaje Actual</string>
    <string name="get_travel_title">Viaje</string>
    <string name="get_message_title">Mensaje</string>
    <string name="my_travels">Mis Viajes</string>
    
    <string name="login_label_email">Email</string>
    <string name="login_label_password">Contraseña</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_register">Registro</string>
    <string name="login_checkbox_recordar">Recordarme</string>
    <string name="login_label_olvidarpass"><u>¿Ha olvidado su contraseña?</u></string>
    
    <string name="search_travel_label_origin">Origen</string>
    <string name="search_travel_label_destiny">Destino</string>
    <string name="search_travel_label_date">Fecha</string>
    <string name="search_travel_button_search">Buscar</string>
    
    <string name="message_button_respond">Responder al mensaje</string>
    
    <string name="toast_email_error">El email no es correcto</string>
    <string name="toast_login_fields_empty">Debes rellenar todos los campos</string>
    <string name="toast_login_incorrect">El email o la contraseña no son correctos</string>
    <string name="toast_connetion_error">No se puede conectar con el servidor. Revisa tu conexión a Internet</string>
    

    <string name="session_close_title">Cerrar Sesión</string>
    <string name="session_close_message">¿Desea cerrar la sesión?</string>
    
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>

</resources>
