<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/general_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_marginLeft"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:gravity="left|center_vertical"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_center"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/ll_logo"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="7"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imgv_logo"
                    android:layout_width="376dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/logo_350x350" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_loading"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="5"
                android:orientation="vertical"
                android:visibility="gone" >

                <ProgressBar
                    android:id="@+id/pb_loading"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_login"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="5"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/edtx_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_top_login"
                    android:hint="@string/login_label_email"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"
                    android:typeface="sans" />

                <EditText
                    android:id="@+id/edtx_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_top_login"
                    android:hint="@string/login_label_password"
                    android:inputType="textPassword"
                    android:textSize="18sp"
                    android:typeface="sans" />

                <CheckBox
                    android:id="@+id/chbx_remember"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_top_login"
                    android:checked="true"
                    android:hint="@string/login_checkbox_recordar" />

                <Button
                    android:id="@+id/bt_login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/btn_blue"
                    android:shadowColor="#000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/login_button_login"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bt_register"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_marginBottom="@dimen/margin_top_login"
                    android:background="@drawable/btn_green"
                    android:shadowColor="#000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/login_button_register"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtv_forgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="3dp"
                    android:shadowColor="#000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/login_label_olvidarpass"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_marginRight"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:gravity="left|center_vertical"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
