<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/general_background"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_marginLeft"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:gravity="left|center_vertical"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/ll_center"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom_search"
                    android:background="@drawable/background_search"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <AutoCompleteTextView
                        android:id="@+id/edtx_origin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_top_search"
                        android:ems="10"
                        android:hint="@string/search_travel_label_origin" >

                        <requestFocus />
                    </AutoCompleteTextView>

                    <AutoCompleteTextView
                        android:id="@+id/edtx_destiny"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_top_search"
                        android:ems="10"
                        android:hint="@string/search_travel_label_destiny" />

                    <EditText
                        android:id="@+id/edtx_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_top_search"
                        android:editable="false"
                        android:ems="10"
                        android:hint="@string/search_travel_label_date"
                        android:inputType="date" />

                    <Button
                        android:id="@+id/bt_search"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_top_search"
                        android:layout_marginTop="@dimen/margin_top_search"
                        android:background="@drawable/btn_blue"
                        android:shadowColor="#000000"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:text="@string/search_travel_button_search"
                        android:textColor="#FFFFFF"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_marginRight"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:gravity="left|center_vertical"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
